--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,52 @@ section {
 .react-bar{
     width: 35%;
 }
+
+/* Services Section */
+.services-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.services-box{
+    padding: 20px;
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 0.5rem;
+    border-bottom: 2px solid var(--main-color);
+    box-shadow: 0 2px 7px rgba(14 55 54 / 15%);
+}
+.services-box .bx{
+    padding-top: 2rem;
+    font-size: 54px;
+    color:var(--main-color);
+}
+.services-box h3{
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 0.7rem 0 0.4rem;
+}
+.services-box a{
+    color: var(--main-color);
+    font-size: var(--p-font);
+    font-weight: 500;
+}
+
+/* hover */
+.services-box:hover{
+    background: #02225a;
+}
+.services-box h3{
+    color: #fff;
+}
+.services-box:hover .bx{
+    color: #22cf91
+}
+.services-box:hover a{
+    color: #8b8a8f;
+}
