--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,13 @@ body{
     color: var(--text-color);
 }
 
+/* for darkmode */
+
+body.active{
+    --text-color: #fff;
+    --bg-color: #0f0c27;
+}
+
 section {
     padding: 50px 10%;
 }
@@ -34,6 +41,53 @@ section {
 *::selection{
     color: var(--bg-color);
     background: var(--main-color);
+}
+/* Navigation bar */
+header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: var(--bg-color);
+    padding: 13px 10%;
+    transition: 0.2s;
+    box-shadow: -3px -3px 7px #ffffff73,
+                2px 2px 5px rgba(94, 104, 121, 0.208);    
+}
+
+.logo{
+    font-size: 1.61rem;
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+.navbar{
+    display: flex;
+}
+
+.navbar a{
+    font-size: 1rem;
+    padding: 10px 20px;
+    color: var(--text-color);
+    font-weight: 500;
+}
+.navbar a:hover{
+    color: var(--hover);
+}
+
+#menu-icon{
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 10001;
+    display: none;
+}
+#darkmode{
+    font-size: 22px;
+    cursor: pointer;
 }
 
 /* Home Section */
@@ -244,3 +298,204 @@ section {
 .services-box:hover a{
     color: #8b8a8f;
 }
+/* Portfolio section */
+.portfolio-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.portfolio-img{
+    overflow: hidden;
+    border-radius: 0.5rem;
+}
+.portfolio-img img{
+    width: 100%;
+    display: block;
+}
+
+.portfolio-img img:hover{
+    transform: scale(1.1);
+    transition: 1s;
+}
+/* Contact- form */
+
+.contact-form{
+    display: grid;
+    place-items: center;
+    margin-top: 1rem;
+}
+
+.contact-form form{
+    display: flex;
+    flex-direction: column;
+    width: 650px;
+}
+
+form input,
+form textarea{
+    padding: 15px;
+    border-radius: 0.5rem;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: hsla(260, 100%, 44%, 0,1);
+    margin-bottom: 1rem;
+    color: var(--text-color);
+}
+form textarea{
+    resize: none;
+    height: 200px;
+}
+.contact-button{
+    width: 160px;
+    cursor: pointer;
+    background: #2768d9;
+    color: #fff;
+    justify-content: center;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-left: 35%;
+}
+.contact-button:hover{
+    background: var(--hover);
+}
+/* Footer */
+.footer{
+    display: grid;
+    place-items: center;
+    padding: 20px;
+    background: #ebebeb;
+    color: #000;
+}
+.footer h2{
+    font-size: 1.5rem;
+    margin-bottom: 1.6rem;
+}
+.footer-social a i{
+    color: rgb(10,26, 208);
+    font-size: 25px;
+    margin-left: 10px;
+    text-align: center;
+    line-height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
+
+/* Making Responsive */
+@media (max-width: 991px) {
+    header {
+      padding: 18px 4%;
+    }
+    section {
+      padding: 50px 4%;
+    }
+  }
+  @media (max-width: 881px) {
+    :root {
+      --big-font: 2.7rem;
+      --medium-font: 1.4rem;
+    }
+  }
+  @media (max-width: 768px) {
+    :root {
+      --big-font: 2.4rem;
+      --medium-font: 1.2rem;
+    }
+    header {
+      padding: 11px 4%;
+    }
+    #menu-icon {
+      display: initial;
+      color: var(--text-color);
+    }
+    header .navbar {
+      position: absolute;
+      top: -500px;
+      left: 0;
+      right: 0;
+      display: flex;
+      flex-direction: column;
+      background: var(--bg-color);
+      box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
+      transition: 0.2s ease;
+      text-align: center;
+    }
+    .navbar.active {
+      top: 100%;
+    }
+    .navbar a {
+      padding: 1.5rem;
+      display: block;
+      background: var(--bg-color);
+    }
+    #darkmode {
+      position: absolute;
+      top: 1.4rem;
+      right: 2rem;
+    }
+    .scroll-down {
+      display: none;
+    }
+    .home {
+      grid-template-columns: 0.5fr 3fr;
+    }
+    .home-text {
+      grid-column: 1/3;
+      padding-left: 1.4rem;
+    }
+    .home-img {
+      order: initial;
+    }
+    .about-container {
+      grid-template-columns: 1fr;
+    }
+    .about-img {
+      display: flex;
+      justify-content: center;
+    }
+    .skills-container {
+      grid-template-columns: 1fr;
+    }
+    .skills-img img {
+      padding-left: 0;
+    }
+    .skills-img {
+      padding-top: 2rem;
+      display: flex;
+      justify-content: center;
+    }
+    .contact-form form{
+      width: 300px;
+    }
+    .contact-button{
+      margin-left: 25%;
+    }
+  }
+  @media (max-width: 340px) {
+    :root {
+      --big-font: 1.7rem;
+      --medium-font: 1.1rem;
+    }
+    .home-text span {
+      font-size: 1rem;
+    }
+    .home-text h2 {
+      font-size: 0.9rem;
+      font-weight: 500;
+    }
+    .information .info-box span {
+      font-size: 1rem;
+    }
+    .portfolio-content {
+      grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    }
+    .contact-form form{
+      width: 300px;
+    }
+    .contact-button{
+      margin-left: 25%;
+    }
+  }
